cmake_minimum_required (VERSION 2.6)
project (mtgos-tools)
include (CheckFunctionExists)
check_function_exists(getopt HAVE_GETOPT)
configure_file ("${PROJECT_SOURCE_DIR}/mtgtools.h.in" "${PROJECT_BINARY_DIR}/mtgtools.h")
include_directories("${PROJECT_BINARY_DIR}")
add_library(mtgcompat mtgcompat.c)
add_executable(firmlink firmlink.cpp)
target_link_libraries(firmlink mtgcompat)
install(TARGETS firmlink DESTINATION bin)